# womack-audio

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-womackfx.sh
.github/workflows/: build.yml  release.yml
distribution/: distribution.xml  welcome.html
docs/: RELEASING.md
docs/assets/: womackfx-social-preview-card.html  womackfx-social-preview.html
docs/superpowers/plans/: 2026-05-04-workflow-tooling.md  2026-06-29-resonote-plugin.md
docs/superpowers/specs/: 2026-06-29-resonote-plugin-design.md  2026-06-30-resonote-scale-snap-design.md
plugins/: CMakeLists.txt
plugins/Resonote/: CMakeLists.txt
plugins/Resonote/Source/: Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Resonote/Source/DSP/: NoteFrequency.h  ResonantSVF.cpp  ResonantSVF.h
plugins/Resonote/Source/UI/: ResonotePanel.cpp  ResonotePanel.h  ResponseCurve.cpp  ResponseCurve.h  Visualizer.cpp  Visualizer.h
plugins/Resonote/Tests/: NoteFrequencyTests.cpp
plugins/Shared/UI/: WomackSkin.h
plugins/WomackFX/: CMakeLists.txt
plugins/WomackFX/Source/: Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/WomackFX/Source/Effects/: EffectBase.h  FuzzEffect.cpp  FuzzEffect.h  TapeDelayEffect.cpp  TapeDelayEffect.h  UnivibeEffect.cpp  UnivibeEffect.h
plugins/WomackFX/Source/UI/: FuzzPanel.cpp  FuzzPanel.h  MainPanel.cpp  MainPanel.h  TapeDelayPanel.cpp  TapeDelayPanel.h  UnivibePanel.cpp  UnivibePanel.h  Visualizer.cpp  Visualizer.h
presets/: README.md
presets/factory/: 01-Classic-Fuzz.xml  02-Slow-Vibe.xml  03-Tape-Echo.xml  04-Full-Chain.xml
scripts/: build-validate.sh  compress-demo.sh  package.sh  record-demo.sh
